Trying again to fix the overlap issue between the h2 and descriptionBody div. This time I'm setting a max-height for the certificates container div so the height doesn't go wild on mobile portrait view where it has room to. I'm also setting the descriptionBody's max-height to 50% so that it doesn't ever try to take up the whole descriptionWindow div. I set descriptionBody's overflow-y to scroll so it will take up the same space in descriptionWindow but scroll if needed to accommodate text overflow. Also added some padding to the descriptonBody and set its background color to the dark gray I'm using. The background color looks cleaner than a border and I believe with the constraints here, this is a good design choice. Here goes nothing!

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -309,6 +309,7 @@ h1, h3 {
   flex-direction: column;
   width: 100%;
   margin: 0;
+  max-height: 1000px;
 }
 
 .imageWindow {
@@ -335,7 +336,6 @@ h1, h3 {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  justify-items: space-evenly;
   align-items: center;
   width: 100%;
   background-color: var(--lightgray);
@@ -352,10 +352,14 @@ h1, h3 {
 .descriptionBody {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
   width: 80%;
-  padding-bottom: 1em;
+  max-height: 50%;
+  margin-bottom: 1em;
+  overflow-y: scroll;
+  background-color: var(--darkgray);
+  padding: 1em;
 }
 
 @media (min-width: 800px) {
@@ -379,6 +383,10 @@ h1, h3 {
 
   .descriptionWindow {
     overflow-y: scroll;
+  }
+
+  .descriptionBody {
+    max-height: 70%;
   }
 
 }
